# parmalgt

./: Background.h  Fermi.cc  Geometry.hpp  IO.hpp  Invert.cc  Inverter.hpp  Kernels.hpp  LocalField.hpp  LocalQuench.cc  LocalQuenchFlow.cc  LocalUnquench.cc  Makefile.am  Methods.hpp  MyMath.h  Point.hpp  PtTypes.hpp  Timer.hpp  Types.h  autogen.sh  configure  configure.ac  fft.hpp  input  newMyQCD.h  newQCDpt.h
include/Kernels/generic/: IO.hpp  Plaquette.hpp  RungeKutta.hpp
testing/: Helper.h  Makefile.am  Makefile.in  test_Bgfield.cc  test_DiracGamma.cc  test_Geometry.cc  test_fft.cc  test_newQCDpt.cc
